--- a/drupal/sites/all/themes/sronline/scss/_layout.scss
+++ b/drupal/sites/all/themes/sronline/scss/_layout.scss
@@ -80,8 +80,8 @@
   bottom: 0;
   left: 0;
   margin: auto;
-  min-height: 50%;
-  min-width: 50%;
+  min-height: 100%;
+  min-width: 100%;
   position: absolute;
   right: 0;
   top: 0;
