--- a/drupal/sites/all/themes/sronline/scss/_typography.scss
+++ b/drupal/sites/all/themes/sronline/scss/_typography.scss
@@ -62,6 +62,7 @@ body {
   font-size:12px;
   line-height:18px;
   color: $color_body_text;
+  background:top center #c9c5c2;
   
 }
 
